# terminus-core-python

./: pyproject.toml
src/tmns/core/: apps.py
