#**************************** INTELLECTUAL PROPERTY RIGHTS ****************************#
#*                                                                                    *#
#*                           Copyright (c) 2025 Terminus LLC                          *#
#*                                                                                    *#
#*                                All Rights Reserved.                                *#
#*                                                                                    *#
#*          Use of this source code is governed by LICENSE in the repo root.          *#
#*                                                                                    *#
#**************************** INTELLECTUAL PROPERTY RIGHTS ****************************#
#
[project]

name = "terminus-core-python"
version = "0.0.1"
description = "Base structures for Terminus Python APIs."
license = {file = "LICENSE"}
readme = "Readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11"
]

#  Dependencies
dependencies = [
]

#  Optional Dependencies
[project.optional-dependencies]
dev = [ 'black' ]

#  Project Information
[project.urls]
"Homepage" = "https://github.com/Terminus-Geospatial/terminus-core-python"

#[project.scripts]

#  Configure the build system
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
